--- a/package.json
+++ b/package.json
@@ -1,46 +1,21 @@
 {
   "name": "telegram_bot",
   "version": "1.0.0",
-  "description": "Node.js TypeScript telegram bot",
-  "main": "dist/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
-    "clean": "rm -rf dist",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write src/**/*.ts",
-    "format:check": "prettier --check src/**/*.ts",
-    "type-check": "tsc --noEmit",
-    "prepare": "husky install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "nodejs",
-    "typescript",
-    "eslint",
-    "prettier"
-  ],
-  "author": "rat101",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.0",
-    "tsx": "^4.6.0",
-    "typescript": "^5.3.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rataonfire/telegram_bot.git"
   },
-  "dependencies": {},
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/rataonfire/telegram_bot/issues"
+  },
+  "homepage": "https://github.com/rataonfire/telegram_bot#readme"
 }
